--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    implementation 'com.elias.invest:invest-common:0.0.1-SNAPSHOT'
+    implementation 'org.springframework.kafka:spring-kafka'
 
+    implementation 'br.com.elias.invest:invest-common:0.0.1-SNAPSHOT'
+
+    runtimeOnly 'org.postgresql:postgresql'
     compileOnly 'org.projectlombok:lombok'
+
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
