--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
     implementation 'org.springframework.kafka:spring-kafka'
 
-    implementation 'br.com.elias.invest:invest-common:0.0.1-SNAPSHOT'
+    implementation 'com.elias.invest:invest-common:0.0.2-SNAPSHOT'
 
     runtimeOnly 'org.postgresql:postgresql'
     compileOnly 'org.projectlombok:lombok'
