--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     bootstrap-servers: localhost:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
     properties:
       spring.json.trusted.packages: "com.elias.investcommon.event.*"
 
@@ -29,3 +29,5 @@ app:
   kafka:
     topics:
       order-created: invest.orders.order-created
+  outbox:
+    relay-delay-ms: 5000
