feat: Adiciona os UseCase para a validação da order e a solicitação de verificação de risco que será consumido pelo risk-compliance-service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,5 +29,7 @@ app:
   kafka:
     topics:
       order-created: invest.orders.order-created
+      order-validated: invest.orders.order-validated
+      risk-check-requested: invest.orders.risk-check-requested
   outbox:
     relay-delay-ms: 5000
